build: Respect libexecdir for gcm-helper-exiv

--- a/src/meson.build
+++ b/src/meson.build
@@ -29,7 +29,7 @@ if get_option('enable-exiv')
     ],
     c_args : cargs,
     install : true,
-    install_dir : 'libexec',
+    install_dir : get_option('libexecdir'),
   )
 endif
 
