build: Set PKGDATADIR to gnome-color-manager
It was set to gnome-software, which made gnome-control-center’s
Color panel unable to find the example images.

https://bugzilla.gnome.org/show_bug.cgi?id=791158

--- a/meson.build
+++ b/meson.build
@@ -118,7 +118,7 @@ conf.set_quoted('DATADIR',
 conf.set_quoted('PKGDATADIR',
                 join_paths(get_option('prefix'),
                            get_option('datadir'),
-                           'gnome-software'))
+                           'gnome-color-manager'))
 conf.set_quoted('BINDIR',
                 join_paths(get_option('prefix'),
                            get_option('bindir')))
