--- a/src/meson.build
+++ b/src/meson.build
@@ -14,67 +14,12 @@ gcm_viewer_resources = gnome.compile_resources(
   c_name : 'gcm',
 )
 
-if get_option('exiv')
-  executable(
-    'gcm-helper-exiv',
-    sources : [
-      'gcm-helper-exiv.cpp',
-    ],
-    include_directories : [
-      include_directories('..'),
-    ],
-    dependencies : [
-      libgio,
-      libexiv,
-    ],
-    c_args : cargs,
-    install : true,
-    install_dir : prefixed_libexecdir,
-  )
-endif
-
 shared_srcs = [
   'gcm-cie-widget.c',
   'gcm-debug.c',
-  'gcm-exif.c',
-  'gcm-print.c',
   'gcm-trc-widget.c',
   'gcm-utils.c',
 ]
-
-executable(
-  'gcm-calibrate',
-  sources : [
-    'gcm-brightness.c',
-    'gcm-brightness.h',
-    'gcm-calibrate-argyll.c',
-    'gcm-calibrate-argyll.h',
-    'gcm-calibrate.c',
-    'gcm-calibrate.h',
-    'gcm-cell-renderer-profile-text.c',
-    'gcm-cell-renderer-profile-text.h',
-    'gcm-gamma-widget.c',
-    'gcm-gamma-widget.h',
-    'gcm-calibrate-main.c',
-    shared_srcs
-  ],
-  include_directories : [
-    include_directories('..'),
-  ],
-  dependencies : [
-    libcanberra,
-    libtiff,
-    libcolord_gtk,
-    libm,
-    libexif,
-    libgio,
-    libgtk,
-    liblcms,
-    libvte,
-  ],
-  c_args : cargs,
-  install : true,
-)
 
 executable(
   'gcm-inspect',
@@ -86,10 +31,8 @@ executable(
     include_directories('..'),
   ],
   dependencies : [
-    libtiff,
-    libcolord_gtk,
+    libcolord,
     libm,
-    libexif,
     libgio,
     libgtk,
   ],
@@ -107,10 +50,8 @@ executable(
     include_directories('..'),
   ],
   dependencies : [
-    libtiff,
-    libcolord_gtk,
+    libcolord,
     libm,
-    libexif,
     libgio,
     libgtk,
   ],
@@ -129,11 +70,9 @@ executable(
     include_directories('..'),
   ],
   dependencies : [
-    libtiff,
     liblcms,
-    libcolord_gtk,
+    libcolord,
     libm,
-    libexif,
     libgio,
     libgtk,
   ],
@@ -154,12 +93,9 @@ executable(
     include_directories('..'),
   ],
   dependencies : [
-    libcanberra,
-    libtiff,
-    libcolord_gtk,
+    libcolord,
     libm,
     liblcms,
-    libexif,
     libgio,
     libgtk,
   ],
@@ -173,9 +109,6 @@ if get_option('tests')
     'gcm-self-test',
     sources : [
       shared_srcs,
-      'gcm-brightness.c',
-      'gcm-calibrate-argyll.c',
-      'gcm-calibrate.c',
       'gcm-gamma-widget.c',
       'gcm-self-test.c',
     ],
@@ -183,15 +116,10 @@ if get_option('tests')
       include_directories('..'),
     ],
     dependencies : [
-      libcolord_gtk,
-      libexif,
+      libcolord,
       libgio,
       libgtk,
-      libcanberra,
-      libexif,
       libm,
-      libtiff,
-      libvte,
     ],
     c_args : cargs
   )
