--- a/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
+++ b/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
@@ -36,6 +36,18 @@
    Validate with `appstream-util validate *.appdata.xml`
   -->
   <releases>
+    <release date="2019-03-08" version="3.35.90">
+      <description>
+        <p>
+          This is a test release for GNOME 3.32 which updates several
+          translations and fixes some build issues.
+        </p>
+        <p>
+          The calibration wizard has been removed as the ArgyllCMS integration
+          has been broken for a long time.
+        </p>
+      </description>
+    </release>
     <release date="2019-03-08" version="3.32.0">
       <description>
         <p>
