--- a/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
+++ b/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
@@ -36,6 +36,13 @@
    Validate with `appstream-util validate *.appdata.xml`
   -->
   <releases>
+    <release date="2019-04-01" version="3.36.0">
+      <description>
+        <p>
+          This is the first stable release for GNOME 3.36.
+        </p>
+      </description>
+    </release>
     <release date="2019-03-08" version="3.35.90">
       <description>
         <p>
