Replace 404 projects.gnome.org with gitlab.gnome.org URLs

--- a/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
+++ b/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
@@ -212,8 +212,8 @@
   <provides>
     <id>gcm-viewer.desktop</id>
   </provides>
-  <url type="homepage">https://projects.gnome.org/gnome-color-manager/</url>
-  <url type="bugtracker">https://bugzilla.gnome.org/enter_bug.cgi?product=gnome-color-manager</url>
+  <url type="homepage">https://gitlab.gnome.org/GNOME/gnome-color-manager</url>
+  <url type="bugtracker">https://gitlab.gnome.org/GNOME/gnome-color-manager/issues/</url>
   <url type="donation">http://www.gnome.org/friends/</url>
   <url type="help">https://help.gnome.org/users/gnome-color-manager/stable/</url>
   <update_contact>richard_at_hughsie.com</update_contact>
