--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -6,7 +6,7 @@ Version:   #VERSION#
 Release:   0.#BUILD#%{?alphatag}%{?dist}
 License:   GPLv2+
 Group:     Applications/System
-URL:       http://projects.gnome.org/gnome-color-manager/
+URL:       https://gitlab.gnome.org/GNOME/gnome-color-manager
 Source0:   http://download.gnome.org/sources/gnome-color-manager/3.25/%{name}-%{version}.tar.xz
 
 Requires:  gnome-icon-theme
