appdata: update some URLs
- Add vcs-browser URL.
- Add translate URL.
- Update the donation URL.

These URLs are visible on GNOME Control Center and Flathub.

More information: https://www.freedesktop.org/software/appstream/docs/chap-Metadata.html#tag-url

--- a/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
+++ b/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
@@ -214,8 +214,10 @@
   </provides>
   <url type="homepage">https://gitlab.gnome.org/GNOME/gnome-color-manager</url>
   <url type="bugtracker">https://gitlab.gnome.org/GNOME/gnome-color-manager/issues/</url>
-  <url type="donation">http://www.gnome.org/friends/</url>
+  <url type="donation">https://www.gnome.org/donate/</url>
   <url type="help">https://help.gnome.org/users/gnome-color-manager/stable/</url>
+  <url type="translate">https://l10n.gnome.org/module/gnome-color-manager/</url>
+  <url type="vcs-browser">https://gitlab.gnome.org/GNOME/gnome-color-manager</url>
   <update_contact>richard_at_hughsie.com</update_contact>
   <project_group>GNOME</project_group>
   <translation type="gettext">gnome-color-manager</translation>
