appdata: Update appdata
- Add missing the launchable and the content_rating tags

--- a/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
+++ b/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
@@ -220,5 +220,7 @@
   <url type="vcs-browser">https://gitlab.gnome.org/GNOME/gnome-color-manager</url>
   <update_contact>richard_at_hughsie.com</update_contact>
   <project_group>GNOME</project_group>
+  <content_rating type="oars-1.1" />
   <translation type="gettext">gnome-color-manager</translation>
+  <launchable type="desktop-id">org.gnome.ColorProfileViewer.desktop</launchable>
 </component>
