--- a/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
+++ b/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
@@ -36,6 +36,17 @@
    Validate with `appstream-util validate *.appdata.xml`
   -->
   <releases>
+    <release date="2025-01-14" version="3.36.1">
+      <description>
+        <p>This release includes the following changes:</p>
+        <ul>
+          <li>Remove forgotten libcanberra include</li>
+          <li>Set prgname to application ID</li>
+          <li>Update appdata</li>
+          <li>Update translations.</li>
+        </ul>
+      </description>
+    </release>
     <release date="2019-04-01" version="3.36.0">
       <description>
         <p>
