--- a/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
+++ b/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
@@ -36,6 +36,11 @@
    Validate with `appstream-util validate *.appdata.xml`
   -->
   <releases>
+    <release date="2025-01-14" version="3.36.2">
+      <description>
+        <p>No notable changes</p>
+      </description>
+    </release>
     <release date="2025-01-14" version="3.36.1">
       <description>
         <p>This release includes the following changes:</p>
