--- a/data/org.gnome.ColorProfileViewer.desktop.in
+++ b/data/org.gnome.ColorProfileViewer.desktop.in
@@ -11,3 +11,4 @@ NotShowIn=GNOME;
 # Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 Keywords=Color;ICC;
 StartupNotify=true
+DBusActivatable=true
