data: Rename appdata to metainfo
The latter is preferred nowadays and is used by other GNOME projects

--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -51,7 +51,7 @@ and generate color profiles in the GNOME desktop.
 %{_datadir}/gnome-color-manager/figures/*
 %{_datadir}/icons/hicolor/*/*/*.png
 %{_datadir}/icons/hicolor/scalable/*/*.svg*
-%{_datadir}/metainfo/org.gnome.ColorProfileViewer.appdata.xml
+%{_datadir}/metainfo/org.gnome.ColorProfileViewer.metainfo.xml
 %{_mandir}/man1/*.1*
 
 %changelog
