--- a/data/appdata/org.gnome.ColorProfileViewer.metainfo.xml.in
+++ b/data/appdata/org.gnome.ColorProfileViewer.metainfo.xml.in
@@ -37,7 +37,7 @@
   </screenshots>
 
   <!--
-   Validate with `appstream-util validate *.appdata.xml`
+   Validate with `appstream-util validate *.metainfo.xml`
   -->
   <releases>
     <release date="2025-01-14" version="3.36.2">
