--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,6 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
-data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
+data/appdata/org.gnome.ColorProfileViewer.metainfo.xml.in
 data/gcm-import.desktop.in
 data/gcm-picker.desktop.in
 data/org.gnome.ColorProfileViewer.desktop.in
