--- a/data/appdata/meson.build
+++ b/data/appdata/meson.build
@@ -1,6 +1,6 @@
 i18n.merge_file(
-  input: 'org.gnome.ColorProfileViewer.appdata.xml.in',
-  output: 'org.gnome.ColorProfileViewer.appdata.xml',
+  input: 'org.gnome.ColorProfileViewer.metainfo.xml.in',
+  output: 'org.gnome.ColorProfileViewer.metainfo.xml',
   type: 'xml',
   po_dir: join_paths(meson.source_root(), 'po'),
   install: true,
