data: Change component type to "desktop-application"
The "desktop" component type is deprecated. Also remove the .desktop suffix from app id

--- a/data/appdata/org.gnome.ColorProfileViewer.metainfo.xml.in
+++ b/data/appdata/org.gnome.ColorProfileViewer.metainfo.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright 2013 Richard Hughes <richard@hughsie.com> -->
-<component type="desktop">
-  <id>org.gnome.ColorProfileViewer.desktop</id>
+<component type="desktop-application">
+  <id>org.gnome.ColorProfileViewer</id>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-2.0+</project_license>
   <name>GNOME Color Manager</name>
